# serialplot

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  RingBuffer.hpp  serialplot.cpp
